--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@theogpepe/uikit",
-  "version": "0.29.0",
-  "description": "Set of UI components for OgPepe projects",
+  "version": "0.30.0",
+  "description": "Set of UI components for PepeX projects",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
